# sqlalchemy-window

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: main.yml  publish.yml  test.yml
src/sqlalchemy_window/: __init__.py  _over_window.py  _select.py  _window.py
tests/: test_over_window.py  test_select.py  test_window.py
